--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,9 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: [published]
+  #release:
+  #  types: [published]
+  workflow_call:
 
 jobs:
   push_to_registry:
