--- a/.github/workflows/java-ci-maven.yml
+++ b/.github/workflows/java-ci-maven.yml
@@ -31,5 +31,5 @@ jobs:
   #call-workflow-using-release:
   #  uses: jntcinco/chat-api/.github/workflows/docker-image.yml@v1
   call-workflow-using-branch:
-    uses: jntcinco/chat-api/.github/workflows/docker-image.yml@main   
+    uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master   
 
