--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
-      contents: read
-      attestations: write
-      id-token: write
+      #contents: read
+      #attestations: write
+      #id-token: write
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
