--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,9 +19,9 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     permissions:
-      packages: write
-      #contents: read
-      #attestations: write
+      #packages: write
+      contents: read
+      attestations: write
       #id-token: write
     steps:
       - name: Check out the repo
