--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,10 +18,10 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    permissions:
+    #permissions:
       #packages: write
-      contents: read
-      attestations: write
+      #contents: read
+      #attestations: write
       #id-token: write
     steps:
       - name: Check out the repo
