--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ on:
   #release:
   #  types: [published]
   workflow_run:
-    workflows: ["Java CI with Maven"]
+    workflows: [Java CI with Maven]
     types:
       - completed
 
