--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ on:
   #  types: [published]
   workflow_run:
     workflows: [Java CI with Maven]
+    branches: [master]
     types:
       - completed
 
