--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -11,6 +11,6 @@ name: Startup Workflow
 on:
   workflow_dispatch:
 
-jobs:
-  call-workflow-using-branch:
-    uses: jntcinco/chat-api/.github/workflows/java-ci-maven.yml@master 
+#jobs:
+  #call-workflow-using-branch:
+    #uses: jntcinco/chat-api/.github/workflows/java-ci-maven.yml@master 
