--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,12 +12,12 @@ name: Publish Docker image
 on:
   #release:
   #  types: [published]
-  workflow_run:
-    workflows: [Java CI with Maven]
-    branches: [master]
-    types:
-      - completed
-  #workflow_call:
+  #workflow_run:
+  #  workflows: [Java CI with Maven]
+  #  branches: [master]
+  #  types:
+  #    - completed
+  workflow_call:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
