--- a/.github/workflows/java-ci-maven.yml
+++ b/.github/workflows/java-ci-maven.yml
@@ -28,6 +28,12 @@ jobs:
     - name: Build with Maven
       #run: mvn -B package --file pom.xml
       run: mvn -B clean verify
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
@@ -35,9 +41,6 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }} 
         labels: ${{ steps.meta.outputs.labels }}
-        secrets: |
-            "["+ DOCKER_USERNAME + "="+ secrets.DOCKER_USERNAME + "]",
-            "["+ DOCKER_PASSWORD + "="+ secrets.DOCKERHUB_ACCESS_TOKEN + "]"
   #call-workflow:
   #  uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
   #call-workflow-in-local-repo:
