--- a/.github/workflows/java-ci-maven.yml
+++ b/.github/workflows/java-ci-maven.yml
@@ -39,7 +39,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: jntcinci/chat-api:latest
+        tags: jntcinco/chat-api:latest
   #call-workflow:
   #  uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
   #call-workflow-in-local-repo:
