--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,12 +12,11 @@ name: Publish Docker image
 on:
   #release:
   #  types: [published]
-  #workflow_run:
-  #  workflows: [Java CI with Maven]
-  #  branches: [master]
-  #  types:
-  #    - completed
-  workflow_call:
+  workflow_run:
+    workflows: [Java CI with Maven]
+    branches: [master]
+    types:
+      - completed
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -42,12 +41,11 @@ jobs:
 
       - name: Build and push Docker image
         id: push
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: jntcinco/chat-api:latest
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
