--- a/.github/workflows/java-ci-maven.yml
+++ b/.github/workflows/java-ci-maven.yml
@@ -29,21 +29,23 @@ jobs:
       #run: mvn -B package --file pom.xml
       run: mvn -B clean verify
     
-    - name: Log in to Docker Hub
-      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-      with:
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: jntcinco/chat-api:latest
+    # - name: Log in to Docker Hub
+      # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      # with:
+        # registry: docker.io
+        # username: ${{ secrets.DOCKER_USERNAME }}
+        # password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+    # - name: Build and push Docker image
+      # uses: docker/build-push-action@v5
+      # with:
+        # context: .
+        # push: true
+        # tags: jntcinco/chat-api:latest
         
-  #call-workflow:
-  #  uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
+  call-workflow:
+   uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
+   needs: build
+   
   #call-workflow-in-local-repo:
   #  uses: ./.github/workflows/docker-image.yml
   #call-workflow-using-release:
