--- a/.github/workflows/java-ci-maven.yml
+++ b/.github/workflows/java-ci-maven.yml
@@ -28,7 +28,9 @@ jobs:
     - name: Build with Maven
       #run: mvn -B package --file pom.xml
       run: mvn -B clean verify
-    
+      
+    - name: Build and Push Docker Image
+      uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
     # - name: Log in to Docker Hub
       # uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       # with:
@@ -42,9 +44,9 @@ jobs:
         # push: true
         # tags: jntcinco/chat-api:latest
         
-  call-workflow:
-   uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
-   needs: build
+  #call-workflow:
+   # uses: jntcinco/chat-api/.github/workflows/docker-image.yml@master
+   # needs: build
    
   #call-workflow-in-local-repo:
   #  uses: ./.github/workflows/docker-image.yml
