--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -21,3 +21,4 @@ jobs:
         with:
           secret-ids: |
             test/GithubAction/hello
+            arn:aws:secretsmanager:ap-southeast-2:033376537995:secret:test/GithubAction/hello-kmEWfz
