--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -22,7 +22,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
-          
+
+      - name: Get caller identity
+        run: aws sts get-caller-identity
+        
       - name: Get AWS Secret
         uses: aws-actions/aws-secretsmanager-get-secrets@v2
         with:
