--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -29,12 +29,13 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            arn:aws:secretsmanager:ap-southeast-2:033376537995:secret:test/GithubAction/hello-kmEWfz
+            AWS_SECRET, arn:aws:secretsmanager:ap-southeast-2:033376537995:secret:test/GithubAction/hello-kmEWfz
+          parse-json-secrets: true
             
       - name: Print AWS Secrets
         run: |
-          echo "Test Example: ${{ env.TEST_EXAMPLE }}"
-          echo "Java Home: ${{ env.JAVA_HOME }}"
+          echo "Test Example: ${{ AWS_SECRET_TEST_EXAMPLE }}"
+          echo "Java Home: ${{ AWS_SECRET_JAVA_HOME }}"
           
 #      - name: Test output
 #        run: |
