--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -15,8 +15,8 @@ jobs:
   aws-secret-manager:
     runs-on: ubuntu-latest
     env:
-      TEST_EXAMPLE: "Will be set from the keyvault."
-      JAVA_HOME: "Will be set from the keyvault."
+      AWS_SECRET_TEST_EXAMPLE: "Will be set from the keyvault."
+      AWS_SECRET_JAVA_HOME: "Will be set from the keyvault."
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
