--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -26,7 +26,7 @@ jobs:
           access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           region: ${{ secrets.AWS_REGION }}
           secrets: |
-            AWS_SECRET, arn:aws:secretsmanager:ap-southeast-2:033376537995:secret:test/GithubAction/hello-kmEWfz
+            AWS_SECRET, ${{ secrets.AWS_SECRET_ARN }}
             
       - name: Print AWS Secrets
         run: |
