--- a/.github/workflows/start-workflow.yml
+++ b/.github/workflows/start-workflow.yml
@@ -27,9 +27,11 @@ jobs:
           region: ${{ secrets.AWS_REGION }}
           secrets: |
             AWS_SECRET, ${{ secrets.AWS_SECRET_ARN }}
+          N_TEST_EXAMPLE: ${{ env.AWS_SECRET_TEST_EXAMPLE }}
+          N_JAVA_HOME: ${{ env.AWS_SECRET_JAVA_HOME }}
             
       - name: Print AWS Secrets
         run: |
-          echo "Test Example 2: ${{ env.AWS_SECRET_TEST_EXAMPLE }}"
-          echo "Java Home: ${{ env.AWS_SECRET_JAVA_HOME }}"
+          echo "Test Example 5: ${{ env.N_TEST_EXAMPLE }}"
+          echo "Java Home 5: ${{ env.N_JAVA_HOME }}"
           
